--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
         @media (min-width: 768px) and (max-width: 1024px) {
             /* iPad - more vertical space */
             body {
-                padding: 20px;
+                padding: 25px 20px;
+            }
+        }
+
+        @media (min-width: 1025px) {
+            /* Desktop/PC - minimal top space */
+            body {
+                padding: 10px 20px;
             }
         }
 
