--- a/oefening.html
+++ b/oefening.html
@@ -2169,6 +2169,297 @@
                 correctAnswer: "visten",
                 uitgang: "ten",
                 explanation: "Verleden tijd meervoud: stam 'vis' + 'ten' (s zit in 't ex-kofschip → 'ten').",
+            },
+
+            // UITGEBREIDE TEGENWOORDIGE TIJD - Alle onderwerpvormen per werkwoord
+            // PRATEN (4 zinnen)
+            {
+                sentence: "Ik [...] vaak met mijn buurvrouw",
+                werkwoord: "praten",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "praat",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] altijd zo snel",
+                werkwoord: "praten",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "praat",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'jij' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Hij [...] liever niet over geld",
+                werkwoord: "praten",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "praat",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] elke dag tijdens de lunch",
+                werkwoord: "praten",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "praten",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // LACHEN (4 zinnen)
+            {
+                sentence: "Ik [...] om zijn grappen",
+                werkwoord: "lachen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "lach",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] veel te hard",
+                werkwoord: "lachen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "lacht",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Zij [...] om de film",
+                werkwoord: "lachen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "lacht",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] nooit om mijn mopjes",
+                werkwoord: "lachen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "lachen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // KOKEN (4 zinnen)
+            {
+                sentence: "Ik [...] vanavond pasta",
+                werkwoord: "koken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "kook",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] altijd zo lekker",
+                werkwoord: "koken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "kookt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Mijn moeder [...] graag Chinese gerechten",
+                werkwoord: "koken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "kookt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] vaak vegetarisch",
+                werkwoord: "koken",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "koken",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // FIETSEN (4 zinnen)
+            {
+                sentence: "Ik [...] elke dag tien kilometer",
+                werkwoord: "fietsen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "fiets",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] veel te hard door de bocht",
+                werkwoord: "fietsen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "fietst",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Hij [...] altijd zonder handen",
+                werkwoord: "fietsen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "fietst",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Zij [...] graag langs de rivier",
+                werkwoord: "fietsen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "fietsen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // PAKKEN (4 zinnen)
+            {
+                sentence: "Ik [...] mijn jas van de kapstok",
+                werkwoord: "pakken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "pak",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] altijd de grootste stukken taart",
+                werkwoord: "pakken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "pakt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Ze [...] haar telefoon uit haar tas",
+                werkwoord: "pakken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "pakt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] wel heel veel bagage mee",
+                werkwoord: "pakken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "pakken",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
             }
         ];
 
