--- a/oefening.html
+++ b/oefening.html
@@ -2460,6 +2460,296 @@
                 correctAnswer: "pakken",
                 uitgang: "en",
                 explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // HOPEN (4 zinnen)
+            {
+                sentence: "Ik [...] op beter weer morgen",
+                werkwoord: "hopen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "hoop",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] op een wonder",
+                werkwoord: "hopen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "hoopt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Hij [...] op een nieuwe baan",
+                werkwoord: "hopen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "hoopt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] dat het lukt",
+                werkwoord: "hopen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "hopen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // FAXEN (4 zinnen)
+            {
+                sentence: "Ik [...] de bestelling naar kantoor",
+                werkwoord: "faxen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "fax",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] nog steeds documenten",
+                werkwoord: "faxen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "faxt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De secretaresse [...] het contract",
+                werkwoord: "faxen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "faxt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] alles naar de hoofdvestiging",
+                werkwoord: "faxen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "faxen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // MIXEN (4 zinnen)
+            {
+                sentence: "Ik [...] de muziek voor het feest",
+                werkwoord: "mixen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "mix",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] de kleuren heel mooi",
+                werkwoord: "mixen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "mixt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De DJ [...] verschillende stijlen",
+                werkwoord: "mixen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "mixt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] alle ingrediënten goed door elkaar",
+                werkwoord: "mixen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "mixen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // BOXEN (4 zinnen)
+            {
+                sentence: "Ik [...] twee keer per week in de sportschool",
+                werkwoord: "boxen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "box",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] tegen de beste tegenstanders",
+                werkwoord: "boxen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "boxt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Mijn broer [...] elke zaterdag in de ring",
+                werkwoord: "boxen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "boxt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Zij [...] al jaren samen",
+                werkwoord: "boxen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "boxen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // FIXEN (4 zinnen)
+            {
+                sentence: "Ik [...] mijn oude laptop",
+                werkwoord: "fixen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "fix",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] alles zo snel",
+                werkwoord: "fixen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "fixt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De monteur [...] het probleem meteen",
+                werkwoord: "fixen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "fixt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] alle bugs uit de software",
+                werkwoord: "fixen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "fixen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
             }
         ];
 
