--- a/oefening.html
+++ b/oefening.html
@@ -2750,6 +2750,296 @@
                 correctAnswer: "fixen",
                 uitgang: "en",
                 explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // SWITCHEN (4 zinnen)
+            {
+                sentence: "Ik [...] tussen verschillende programma's",
+                werkwoord: "switchen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switch",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] heel vaak van mening",
+                werkwoord: "switchen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switcht",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Hij [...] altijd naar een ander kanaal",
+                werkwoord: "switchen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switcht",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] regelmatig van provider",
+                werkwoord: "switchen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switchen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // CHECKEN (4 zinnen)
+            {
+                sentence: "Ik [...] mijn telefoon elke minuut",
+                werkwoord: "checken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "check",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] nooit je huiswerk",
+                werkwoord: "checken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checkt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De leraar [...] alle toetsen zorgvuldig",
+                werkwoord: "checken",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checkt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] de antwoorden samen",
+                werkwoord: "checken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checken",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // PUSHEN (4 zinnen)
+            {
+                sentence: "Ik [...] mezelf om beter te worden",
+                werkwoord: "pushen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "push",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] te hard tijdens trainingen",
+                werkwoord: "pushen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pusht",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De trainer [...] zijn team tot het uiterste",
+                werkwoord: "pushen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pusht",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] elkaar om door te gaan",
+                werkwoord: "pushen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pushen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // PASSEN (4 zinnen)
+            {
+                sentence: "Ik [...] deze schoenen graag",
+                werkwoord: "passen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "pas",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] goed in ons team",
+                werkwoord: "passen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "past",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Deze jas [...] perfect bij je broek",
+                werkwoord: "passen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "past",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Zij [...] altijd op elkaar",
+                werkwoord: "passen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "passen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // POETSEN (4 zinnen)
+            {
+                sentence: "Ik [...] elke dag mijn schoenen",
+                werkwoord: "poetsen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poets",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] de ramen zo grondig",
+                werkwoord: "poetsen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetst",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Mijn vader [...] zijn auto elke zondag",
+                werkwoord: "poetsen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetst",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] jullie kamer nooit",
+                werkwoord: "poetsen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetsen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
             }
         ];
 
